
syntax = "proto3";
package meagen;
option go_package = "mea.gen.d/";

enum ImgType {
  NONE = 0;
  MONO = 1;
  DUO = 2;
  RGB = 3;
  RGBA = 4;
}

enum InpaintType {
  SDXL = 0;
  FLUX = 1;
  BOTH = 2;
}

message Empty {}

message Position {
  uint32 x_pos = 1;
  uint32 y_pos = 2;
}

message PatchPixels {
  bytes pixels = 1;
}

message ImgInfo {
  uint32 width = 1;
  uint32 height = 2;
  ImgType img_type = 3;
}

message Image {
  ImgInfo info = 1;
  bytes pixels = 2;
}

message InpaintData {
  Image img = 1;
  Image mask = 2;
}

message Options {
  uint32 seed = 1;
  float img_power = 2;
  InpaintType model_flag = 3;
  repeated Slot prompt_chain = 4;
}

enum Slot {
  a = 0;
  b = 1;
  c = 2;
}

message SlotedImage {
  Slot slot = 1;
  Image image = 2;
}

message SlotedPrompt {
  Slot slot = 1;
  string prompt = 2;
}

service Comfy {
  rpc SetImage(SlotedImage) returns (Empty) {}
  rpc SetPrompt(SlotedPrompt) returns (Empty) {}
  rpc SetMask(Image) returns (Empty) {}
  rpc SetOptions(Options) returns (Empty) {}
  rpc SetCrop(Image) returns (Empty) {}
  rpc Inpaint(Empty) returns (Image) {}
  rpc UberInpaint(Empty) returns (Image) {}
  rpc Img2Img(Empty) returns (Image) {}
  rpc Txt2Img(Empty) returns (Image) {}
  rpc Ipnet(Empty) returns (Image) {}
  rpc Reboot(Empty) returns (Empty) {}
}

// 4 setters
// 
